# permission-calculator

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: lint.yml  test.yml
benches/: calculator.rs
src/: calculator.rs  error.rs  lib.rs  member.rs  prelude.rs  role.rs
