[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
documentation = "https://rarity.cascadia.cafe/rarity_permission_calculator/index.html"
edition = "2018"
homepage = "https://github.com/rarity-rs/permission-calculator"
include = ["src/*.rs", "Cargo.toml", "README.md"]
keywords = ["twilight"]
license = "ISC"
name = "rarity-permission-calculator"
publish = false
repository = "https://github.com/rarity-rs/permission-calculator.git"
readme = "README.md"
version = "0.1.0"

[dependencies]
tracing = { default-features = false, optional = true, version = "0.1" }
twilight-model = { default-features = false, version = "0.1" }

[dev-dependencies]
criterion = { default-features = false, version = "0.3" }
static_assertions = { default-features = false, version = "1" }

[features]
default = ["tracing"]

[[bench]]
name = "calculator"
harness = false
