[package]
authors = ["Twilight Contributors"]
categories = []
description = "Permission calculator for Twilight."
documentation = "https://docs.rs/twilight-permission-calculator"
edition = "2018"
homepage = "https://github.com/twilight-rs/permission-calculator"
include = ["src/*.rs", "Cargo.toml", "README.md"]
keywords = ["twilight"]
license = "ISC"
name = "twilight-permission-calculator"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/permission-calculator.git"
version = "0.1.0"

[dependencies]
tracing = { default-features = false, optional = true, version = "0.1" }
twilight-model = { default-features = false, version = "0.3" }

[dev-dependencies]
criterion = { default-features = false, version = "0.3" }
static_assertions = { default-features = false, version = "1" }

[features]
default = ["tracing"]

[[bench]]
name = "calculator"
harness = false
